atualizacao da funcionalidade 14